# eaas-cloud-migration

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  presentation.html
.claude/: settings.json
batch/: CLAUDE.md  Dockerfile  reconcile.py  requirements.txt
decisions/: ADR-001-migration-pattern.md  ADR-002-target-cloud-services.md  ADR-003-secrets-hook-vs-prompt.md  ADR-004-five-rs-workload-assessment.md
docs/: discovery.md  memo.md
infra/: local.tfvars  main.tf  outputs.tf  variables.tf
infra/modules/: ecs.tf  elasticache.tf  observability.tf  rds.tf  s3.tf
reporting-db/: CLAUDE.md  schema.sql
runbooks/: cto-office-runbook.md  legal-compliance-runbook.md  ops-runbook.md
tests/: conftest.py  pyproject.toml
tests/contract/: test_connectivity.py
tests/integrity/: test_data_integrity.py
tests/smoke/: test_web.py
web-app/: CLAUDE.md  Dockerfile  requirements.txt
web-app/src/: init_db.py  main.py
